# MandelBrot

./: CMakeLists.txt  README.md
.cache/clangd/index/: complex.cpp.3A568EF7BAF79509.idx  complex.h.24F16B3AD35D06D8.idx  graph.cpp.A21200A631B4D242.idx  graph.h.E18E0A9552A2B457.idx  main.cpp.EB55DC2E973B75FF.idx  mandelbrot.cpp.913A174808349022.idx  mandelbrot.h.D0BBA1B88431F29F.idx  point.cpp.5E69160DEEC20B9A.idx  point.h.F83331C1A8F2F13B.idx
src/: complex.cpp  graph.cpp  main.cpp  mandelbrot.cpp  point.cpp
src/headers/: complex.h  graph.h  mandelbrot.h  point.h
